--- a/Web-Programming/Notes/5.css
+++ b/Web-Programming/Notes/5.css
@@ -23,7 +23,8 @@
   }
 }
 
-/*Good list of breakpoints: https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/screen-sizes.png */
+/*Good list of breakpoints:
+  https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/screen-sizes.png */
 
 html {
   font-size: 24px;
